--- a/css/style.css
+++ b/css/style.css
@@ -276,6 +276,25 @@ img {
   gap: 30px;
 }
 .work-list__item {
+  position: relative;
+}
+.work-text {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+
+  padding-top: 27px;
+  padding-bottom: 27px;
+
+  background: rgba(47, 48, 58, 0.8);
+
+  font-weight: 700;
+  line-height: calc(16 / 14);
+  text-align: center;
+  text-transform: uppercase;
+
+  color: var(--main-white);
 }
 
 /* team */
