--- a/css/style.css
+++ b/css/style.css
@@ -507,6 +507,37 @@ img {
 
   text-decoration: none;
 }
+.cards-thumb {
+  position: relative;
+}
+.cards-thumb::before {
+  position: absolute;
+  content: '';
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+
+  opacity: 0;
+  background-color: rgb(33, 150, 243, 0.9);
+}
+.cards-text {
+  position: absolute;
+  top: 63px;
+  left: 24px;
+  width: 322px;
+
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  opacity: 0;
+  color: #ffffff;
+}
+.cards-thumb:hover::before {
+  opacity: 1;
+}
+.cards-thumb:hover .cards-text {
+  opacity: 1;
+}
 .cards-list__item {
   width: calc((100% - 60px) / 3);
 
