--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   --main-dark: #212121;
   --main-light: #757575;
   --main-white: #ffffff;
-  --main-hover: #2196f3;
+  --main-accent: #2196f3;
   --btn-light: #f5f4fa;
   --bg-sol: #2f303a;
 
@@ -12,6 +12,8 @@
 
   --main-font: 'Roboto', sans-serif;
   --secondary-font: 'Raleway', sans-serif;
+
+  --main-transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
 body {
   font-family: var(--main-font);
@@ -82,14 +84,21 @@ img {
 .nav-span {
   font-family: var(--secondary-font);
 
-  color: var(--main-hover);
+  color: var(--main-accent);
 }
+/* nav + transition */
 .nav {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
-}
 
+  transition: color 250ms var(--main-transition);
+}
+.nav:focus,
+.nav:hover,
+#active {
+  color: var(--main-accent);
+}
 .nav-list {
   display: flex;
   gap: 50px;
@@ -122,9 +131,10 @@ img {
   padding-top: 32px;
   padding-bottom: 32px;
 }
-.contact-list__mail,
-.contact-list__tel {
+.header-icon {
   fill: #757575;
+
+  transition: fill 250ms var(--main-transition);
 }
 .contact-list__mail:hover .header-icon,
 .contact-list__mail:focus .header-icon {
@@ -144,11 +154,7 @@ img {
 .contact-list__tel:focus .header-icon {
   fill: #2196f3;
 }
-.nav:focus,
-.nav:hover,
-.active {
-  color: var(--main-hover);
-}
+
 /* main */
 /* hero */
 .hero {
@@ -201,7 +207,9 @@ img {
   border: none;
 
   color: var(--main-white);
-  background-color: var(--main-hover);
+  background-color: var(--main-accent);
+
+  transition: background-color 250ms var(--main-transition);
 }
 .hero__button:hover,
 .hero__button:focus {
@@ -365,11 +373,14 @@ img {
 
   background-color: var(--main-white);
   border-radius: 50%;
+
+  transition: background-color 250ms var(--main-transition);
 }
 .team-icon__socials {
   fill: #afb1b8;
+
+  transition: fill 250ms var(--main-transition);
 }
-/* Розширений варіант */
 .team-icon__link:hover,
 .team-icon__link:focus {
   background-color: #2196f3;
@@ -400,6 +411,8 @@ img {
 
   border: 1px solid #afb1b8;
   border-radius: 4px;
+
+  transition: border-color 250ms var(--main-transition);
 }
 .clients-list__link {
   display: flex;
@@ -412,14 +425,16 @@ img {
 }
 .clients-icon {
   fill: #afb1b8;
+
+  transition: fill 250ms var(--main-transition);
 }
 .clients-list__item:hover,
 .clients-list__item:focus {
-  border-color: var(--main-hover);
+  border-color: var(--main-accent);
 }
 .clients-list__link:hover .clients-icon,
 .clients-list__link:focus .clients-icon {
-  fill: var(--main-hover);
+  fill: var(--main-accent);
 }
 /* Portfolio */
 /* ////////// */
@@ -463,6 +478,9 @@ img {
   border: none;
 
   background-color: var(--btn-light);
+
+  transition: background-color 250ms var(--main-transition), color 250ms var(--main-transition),
+    box-shadow 250ms var(--main-transition);
 }
 .btn-list__one {
   padding-top: 6px;
@@ -483,11 +501,11 @@ img {
 .btn:focus {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 
-  background-color: var(--main-hover);
+  background-color: var(--main-accent);
   color: var(--main-white);
 }
 .current-btn {
-  background-color: var(--main-hover);
+  background-color: var(--main-accent);
   color: var(--main-white);
 }
 .current-btn:hover,
@@ -505,48 +523,48 @@ img {
 .cards-list__link {
   display: block;
 
-  text-decoration: none;
+  transition: box-shadow 250ms var(--main-transition);
 }
+.cards-list__link:hover,
+.cards-list__link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .cards-thumb {
   position: relative;
+
+  overflow: hidden;
 }
-.cards-thumb::before {
+.cards-overlay {
   position: absolute;
-  content: '';
-  display: inline-block;
+  left: 0;
+  bottom: 0;
+
   width: 100%;
   height: 100%;
 
-  opacity: 0;
-  background-color: rgb(33, 150, 243, 0.9);
+  transform: translateY(100%);
+
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transition: transform 250ms var(--main-transition);
+}
+.cards-list__item:hover .cards-overlay {
+  transform: translateX(0%);
 }
 .cards-text {
-  position: absolute;
-  top: 63px;
-  left: 24px;
-  width: 322px;
+  padding: 63px 24px;
 
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
-  opacity: 0;
   color: #ffffff;
-}
-.cards-thumb:hover::before {
-  opacity: 1;
-}
-.cards-thumb:hover .cards-text {
-  opacity: 1;
 }
 .cards-list__item {
   width: calc((100% - 60px) / 3);
 
   border: 1px solid #eeeeee;
   background: #ffffff;
-}
-.cards-list__link:hover,
-.cards-list__link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .cards-list__container {
@@ -601,15 +619,17 @@ img {
 .footer-span {
   font-family: var(--secondary-font);
 
-  color: var(--main-hover);
+  color: var(--main-accent);
 }
 
-.f-nav {
+.footer-nav {
   line-height: 1.7;
+
+  transition: color 250ms var(--main-transition);
 }
-.f-nav:hover,
-.f-nav:focus {
-  color: var(--main-hover);
+.footer-nav:hover,
+.footer-nav:focus {
+  color: var(--main-accent);
 }
 .footer-list__item {
   margin-bottom: 9px;
@@ -627,9 +647,9 @@ img {
   color: rgba(255, 255, 255, 0.6);
 }
 /* socials */
-.socials {
+.footer-socials {
 }
-.socials-text {
+.footer-socials__text {
   font-weight: 700;
   font-size: 14px;
   line-height: calc(16 / 14);
@@ -640,13 +660,13 @@ img {
 
   color: var(--main-white);
 }
-.socials-list {
+.footer-socials__list {
   display: flex;
   gap: 10px;
 }
-.socials-list__item {
+.footer-socials-list__item {
 }
-.socials-list__link {
+.footer-socials-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -656,11 +676,13 @@ img {
 
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
+
+  transition: background-color 250ms var(--main-transition);
 }
-.socials-list__link:hover,
-.socials-list__link:focus {
-  background-color: var(--main-hover);
+.footer-socials-list__link:hover,
+.footer-socials-list__link:focus {
+  background-color: var(--main-accent);
 }
-.socials-icon {
+.footer-socials__icon {
   fill: var(--main-white);
 }
