--- a/css/style.css
+++ b/css/style.css
@@ -695,23 +695,29 @@ img {
   height: 100%;
 
   background-color: rgba(0, 0, 0, 0.2);
+
+  transition: opacity 250ms var(--main-transition);
 }
 .backdrop.backdrop-hidden {
   opacity: 0;
   pointer-events: none;
+}
+.backdrop.backdrop-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.8);
 }
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
 
-  transform: translate(-50%, -50%);
-
   width: 528px;
   height: 581px;
 
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  transform: translate(-50%, -50%) scale(1);
+
+  transition: transform 250ms var(--main-transition);
 
   background-color: var(--main-white);
 }
