--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,21 @@ img {
 #active {
   color: var(--main-accent);
 }
+#active {
+  position: relative;
+}
+#active::after {
+  content: '';
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  width: 100%;
+  height: 4px;
+
+  background-color: var(--main-accent);
+}
 .nav-list {
   display: flex;
   gap: 50px;
